added branch for ai-transformation-demo/after-modernization

--- a/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
+++ b/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
@@ -14,7 +14,7 @@
 //   top: 9%;
 //   right: 10%;
 //   height: 100%;
-//   padding: 5px 5p
+//   padding: 5px 5px 10px 5px;
 
 //   img {
 //     height: 90%;
@@ -3428,7 +3428,7 @@ background-color: #F9FBFD;
 
 .paintImage {
   width: 100%;
-  height: 350px;
+  height: 300px;
   object-fit: cover;
 }
 
