--- a/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
+++ b/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
@@ -14,7 +14,7 @@
 //   top: 9%;
 //   right: 10%;
 //   height: 100%;
-//   padding: 5px 5p
+//   padding: 5px 5px 10px 5px;
 
 //   img {
 //     height: 90%;
@@ -3175,8 +3175,7 @@ background-color: #F9FBFD;
   padding: 16px;
   display: flex;
   align-items: center;
-  //gap: 16px;
-  //justify-content: space-between;
+  gap: 16px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
   transition: box-shadow 0.2s ease;
   cursor: pointer;
@@ -3233,7 +3232,7 @@ background-color: #F9FBFD;
 /// Dummy UI
 .container {
   font-family: sans-serif;
-  padding: 12px;
+  padding: 20px;
   background-color: #f9fafb;
   //display: grid;
 }
