--- a/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
+++ b/client-app/src/pages/ShoppingCopilotMTC/styles.module.scss
@@ -3175,8 +3175,7 @@ background-color: #F9FBFD;
   padding: 16px;
   display: flex;
   align-items: center;
-  //gap: 16px;
-  //justify-content: space-between;
+  gap: 16px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
   transition: box-shadow 0.2s ease;
   cursor: pointer;
@@ -3233,7 +3232,7 @@ background-color: #F9FBFD;
 /// Dummy UI
 .container {
   font-family: sans-serif;
-  padding: 12px;
+  padding: 20px;
   background-color: #f9fafb;
   //display: grid;
 }
@@ -3287,7 +3286,7 @@ background-color: #F9FBFD;
   background: white;
   border-radius: 12px;
   overflow: hidden;
-  width: 450px;
+  width: 320px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
@@ -3420,7 +3419,7 @@ background-color: #F9FBFD;
   background: white;
   border-radius: 12px;
   overflow: hidden;
-  width: 450px;
+  width: 320px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
@@ -3428,7 +3427,7 @@ background-color: #F9FBFD;
 
 .paintImage {
   width: 100%;
-  height: 300px;
+  height: 200px;
   object-fit: cover;
 }
 
